src/objects/Survey__c.object
<CustomObject>
    <description>Surveys run by CKWs. There is one entry here for each type of survey. Survey questions (and responses) are NOT stored here.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that ordered to run the survey</description>
        <inlineHelpText>Select the customer who ordered to run the survey</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_No_Interviewee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the submission to not have a valid farmer id attached to it. Used for surveys that are not about interviewing farmers</description>
        <label>Allow No Interviewee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Submission_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a submission to be sent to salesforce and then used for another purpose other than just saving the submission in the standard format</description>
        <inlineHelpText>Check this to stop the a submission from being saved to Salesforce once they have been sent to SF. Leave unchecked if you do not know what this does</inlineHelpText>
        <label>Block Submission Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defer_Post_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in cases where a survey has post processing but you do not want it to run immediately for each submission. Current use case is for post processing to run when a submission has been approved</description>
        <inlineHelpText>Post processing should not be run immediately until a submission has been approved</inlineHelpText>
        <label>Defer Post Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of survey</description>
        <inlineHelpText>End date of survey</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Margin__c</fullName>
        <description>Error margin assigned to the survey after evaluation</description>
        <inlineHelpText>Error margin assigned to the survey after evaluation</inlineHelpText>
        <label>Error Margin</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Error_Margine__c</fullName>
        <description>Error margin assigned to the survey after evaluation</description>
        <inlineHelpText>Error margin assigned to the survey after evaluation</inlineHelpText>
        <label>Error Margine</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Export_Type__c</fullName>
        <description>What format should the submissions get bounced to another survey as</description>
        <label>Export Type</label>
        <picklist>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Export_URL__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <description>The URL to export a survey to</description>
        <label>Export URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Form_Data__c</fullName>
        <description>Raw x-form (XML form) data that comprises the survey form (questions and their types + metadata)</description>
        <label>Form Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of running the survey</description>
        <inlineHelpText>Frequency of running the survey</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_Poverty_Scorecard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include a link to the poverty scorecard at time of submission for the interviewee</description>
        <label>Include Poverty Scorecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Questions__c</fullName>
        <description>Number of questions</description>
        <inlineHelpText>Number of questions in this survey</inlineHelpText>
        <label>Number of Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <description>An integer value indicating how many &quot;points&quot; a survey is worth. By default, the value is 1, but if a survey creator wants to give this survey additional weight (because it is long, complex, or very important, he/she may choose a point value greater than 1.

Monthly survey targets indicate the number of survey points that a CKW must earn in the given month to qualify for the various payment levels.</description>
        <label>Point Value</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Processing_Method__c</fullName>
        <description>The name of the process that a submission for this survey should follow for post processing</description>
        <inlineHelpText>If you don&apos;t know what this means and are not in the tech team please leave this field set to None</inlineHelpText>
        <label>Post Processing Method</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CKW_Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKW_Baseline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKW_Staff_Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcounty_Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDR_AGENT_VISIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDOM_RAIN_GUAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDOM_RAIN_GUAGE_REG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTN_CHANNELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQUIPMENT_TRACKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EADD_FARMER_EXTRA_INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EADD_HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia_Farmer_Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATA_VALIDATOR_SPOT_CHECK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATA_VALIDATOR_BACK_CHECK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIELD_OFFICER_SUPPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHI_GROUP_REGISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHI_HOUSEHOLD_REGISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDR_PA_PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA_HEALTH_PROGRAMME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTN_WEEKLY_REPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAADS_BASELINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAADS_ADVISORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPORTUNITY_CLIENT_PROFILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW_FARMER_REG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW_HARVEST_REG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EW_SALE_REG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT_CIW_INFORMATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT_FARMER_REGISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT_CONTENT_SURVEY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CKW Surveys</relationshipLabel>
        <relationshipName>CKW_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondants__c</fullName>
        <description>Target number of respondents for this survey</description>
        <inlineHelpText>Target number of respondents for this survey</inlineHelpText>
        <label>Target Number of Respondents</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Save_To_Backend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the survey be saved to the backend. This only needs to be ticked if the Save_To_Salesforce option is selected and the survey needs to be processed by Salesforce and saved in the backend datastore. If Save_To_Salesforce is not checked then just ignore this as the survey will always go to the backend in this case</description>
        <inlineHelpText>If you don&apos;t know what this is for please leave it unchecked</inlineHelpText>
        <label>Save To Backend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_To_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save the submissions from this survey to salesforce</description>
        <label>Save To Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of Survey</description>
        <inlineHelpText>Start Date of Survey</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Save_To_Backend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the survey should not be saved to the backend DB</description>
        <label>Stop Save To Backend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>A unique name for the survey</description>
        <inlineHelpText>Please select a friendly name for the survey</inlineHelpText>
        <label>Survey Name</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey_Purpose__c</fullName>
        <description>Purpose of running this survey</description>
        <inlineHelpText>Test: to test a survey with CKWs before commercial launch
Pilot: Running a survey in small scale
Production: Running the survey in full scale
Data Validation: Running the survey for data back check
Market Prices: Surveys to capture market prices</inlineHelpText>
        <label>Survey Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Prices</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <description>Current status of survey</description>
        <inlineHelpText>Select Active to create a form and questions for the survey. Select Published to make it available to the phones. Select completed to hide it from the phones.</inlineHelpText>
        <label>Survey Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>BUCCODEG</fullName>
        <columns>Survey_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Number_of_Questions__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>BUCCODEG</value>
        </filters>
        <label>BUCCODEG</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>List_of_All_Surveys</fullName>
        <columns>Survey_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Number_of_Questions__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>List of All Surveys</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>lac_surveys</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Survey_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>MANA</value>
        </filters>
        <label>lac surveys</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{0000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>